adom-rs/tui/src/chatwidget/snapshots/adom_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
  Would you like to run the following command?

  Reason: this is a test reason such as one that would be produced by the
  model

  $ echo hello world

› 1. Yes, proceed
  2. Yes, and don't ask again for this command
  3. No, and tell Adom what to do differently esc

  Press enter to confirm or esc to cancel
