adom-rs/tui/src/chatwidget/snapshots/adom_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
  Would you like to make the following edits?

  Reason: The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. Yes, proceed
  2. No, and tell Adom what to do differently esc

  Press enter to confirm or esc to cancel
